添加自动化脚本

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title: 霜序廿的个人网站
 subtitle: ''
-description: ''
-keywords:
+description: 记录个人成长与生活，前端，算法，nlp
+keywords: 前端，算法，nlp，生活
 author: NianShuangxu
 language: zh-CN
 timezone: ''
