--- a/themes/kaze/_config.yml
+++ b/themes/kaze/_config.yml
@@ -3,7 +3,7 @@
 title: 霜序廿的个人网站
 author: 霜序廿
 # put the logo on the ${blog_path}/source/img/${picname}.png or use urls
-# logo_img: https://img.songhn.com/img/Y67gdd.png
+logo_img: https://q2.qlogo.cn/headimg_dl?dst_uin=2749909223&spec=5
 author_img: https://q2.qlogo.cn/headimg_dl?dst_uin=2749909223&spec=5
 author_description: 一个爱算法的小前端
 #------------------------
