--- a/themes/kaze/_config.yml
+++ b/themes/kaze/_config.yml
@@ -200,6 +200,9 @@ artitalk:
   enable: false
   appId: 
   appKey: 
+editedArticle:
+  enable: true
+  repo: https://github.com/shuangxunian/shuangxunian.github.io
 #------------------------
 # minify config
 # css minify uses autoprefixer and clean-css
