--- a/themes/kaze/_config.yml
+++ b/themes/kaze/_config.yml
@@ -28,10 +28,14 @@ about:
 # Links
 #------------------------
 links:
-  # name:
-  #   url: https://example.com
-  #   avatar:
-  #   description:
+  name: BladeHiker
+    url: https://blog.bladehiker.com
+    avatar: https://blog.bladehiker.com/img/favicon.jpg
+    description: 
+  name: 李金珂的小屋
+    url: https://www.lijinke.cn/
+    avatar: https://www.lijinke.cn/images/my.jpeg
+    description: 要想学仙术,哪能不吃苦
   #------------------------
   # tip: if you want to use QQ avatar without giving away your QQ number,
   # you can use this api to get an encrypted url:
