--- a/themes/kaze/_config.yml
+++ b/themes/kaze/_config.yml
@@ -31,7 +31,7 @@ links:
   name: BladeHiker
     url: https://blog.bladehiker.com
     avatar: https://blog.bladehiker.com/img/favicon.jpg
-    description: 
+    description: 全栈摄影工具人
   name: 李金珂的小屋
     url: https://www.lijinke.cn/
     avatar: https://www.lijinke.cn/images/my.jpeg
