--- a/themes/kaze/_config.yml
+++ b/themes/kaze/_config.yml
@@ -28,14 +28,14 @@ about:
 # Links
 #------------------------
 links:
-  name: BladeHiker
+  'BladeHiker':
     url: https://blog.bladehiker.com
     avatar: https://blog.bladehiker.com/img/favicon.jpg
-    description: 全栈摄影工具人
-  name: 李金珂的小屋
+    description: '全栈摄影工具人'
+  '李金珂的小屋':
     url: https://www.lijinke.cn/
     avatar: https://www.lijinke.cn/images/my.jpeg
-    description: 要想学仙术,哪能不吃苦
+    description: '要想学仙术,哪能不吃苦'
   #------------------------
   # tip: if you want to use QQ avatar without giving away your QQ number,
   # you can use this api to get an encrypted url:
