--- a/themes/kaze/_config.yml
+++ b/themes/kaze/_config.yml
@@ -36,6 +36,10 @@ links:
     url: https://www.lijinke.cn/
     avatar: https://www.lijinke.cn/images/my.jpeg
     description: '要想学仙术,哪能不吃苦'
+  'ADD-SP':
+    url: https://www.addesp.com/
+    avatar: https://www.addesp.com/avatar
+    description: '寂静中交织着热情'
   #------------------------
   # tip: if you want to use QQ avatar without giving away your QQ number,
   # you can use this api to get an encrypted url:
